<resources>
    <string name="app_name">BudgetBuggy</string>
    <string name="edit_name">Enter correct name</string>
    <string name="profile_picture">profile picture</string>
    <string name="check_name">Check</string>
    <string name="next_pic">Next</string>
    <string name="back_pic">Back</string>
    <string name="resultString1">BudgetBuggy</string>
    <string name="signUp"> Sign up</string>
    <string name="signIn"> Sign in</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="budgetAmtHint">Budget Amount</string>
    <string name="budgetTimeHint">Budget Time in Days</string>
    <string name="shoppingTimeHint">Shopping Time in Days</string>
    <string name="addItemText">Add Item</string>
    <string name="exitText">Create Account</string>
    <string name="exitInfo">Edit Info</string>
    <string name="addItem">Add Item</string>
    <string name="viewBudget">View Budget</string>
    <string name="viewShoppingList">View Shopping List</string>
    <string name="Item1">Milk</string>
    <string name="Item1Type">Food</string>
    <string name="Item1Store">Target $5</string>
    <string name="Item2">Lotion</string>
    <string name="Item2Type">Cosmetic</string>
    <string name="Item2Store">Sephora $30</string>
    <string name="Item3">Paper Towels</string>
    <string name="Item3Type">Cleaning</string>
    <string name="Item3Store">Target $3</string>
    <string name="Item4">Toothpaste</string>
    <string name="Item4Type">Toiletry</string>
    <string name="Item4Store">CVS $7</string>
    <string name="ShoppingList">Shopping List</string>
    <string name="CartCost">Cart Total: $45</string>
    <string name="item1">Milk</string>
    <string name="item2">Paper Towels</string>
    <string name="subItem1">$5</string>
    <string name="subItem2">$3</string>
    <string name="totalCost">Total Cost: $8</string>

</resources>
